Cleaned up a few things in the starter code